# GamessQ

./: .gitignore  .travis.yml  INSTALL  LICENSE  Makefile.am  README  bundle.sh.in  configure.ac  doxygen.conf  gamessQ.sln  gamessQ.vcproj  gamessQ.vcxproj  gamessQd.vcproj  gamessQd.vcxproj  gms  index.html
.github/: ISSUE_TEMPLATE.md
Icon/CVS/: Repository
config/CVS/: Repository
debian/: changelog  control  copyright  menu  rules
debian/CVS/: Entries  Repository
doc/: gamessq.html
doc/CVS/: Entries  Repository
doc/man/: gamessq.1
doc/man/CVS/: Entries  Repository  Root
doc/man1/CVS/: Repository
gamessQ.xcodeproj/: project.pbxproj
src/: Info.plist  Makefile.am  about_gamessq.cpp  about_gamessq.h  configuration_dialog.cpp  configuration_dialog.h  confirm_overwrite.cpp  confirm_overwrite.h  gamessq.cpp  gamessq.h  gamessq.pjd  gamessq.pjd.bak  gamessq_client.h  gamessq_common.h  gamessq_frame.cpp  gamessq_frame.h  gamessq_posix_client.cpp  gamessq_posix_client.h  gamessq_windows_client.cpp  gamessq_windows_client.h  gamessqd.cpp  gamessqd.h  gamessqd_posix.cpp  gamessqd_posix.h  gamessqd_windows.cpp  gamessqd_windows.h  job.cpp  job.h  job_options_dialog.cpp  job_options_dialog.h  job_queue_manager.cpp  job_queue_manager.h  license  log_viewer.cpp  log_viewer.h  posix_job.cpp  posix_job.h  resources.cpp  resources.h  windows_icon.rc  (+2 more)
src/CVS/: Entries  Repository
src/icons/: GamessQ.icns  gamessq-win.xcf  gamessq.xcf
src/icons/CVS/: Entries  Repository
